dokandar-k8s-cluster-setup/manifest-files/network/11-frontend-allow-alb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-allow-alb
  namespace: frontend
  labels:
    environment: prod
    managed-by: gitlab-ci
    app.kubernetes.io/part-of: dokandar
spec:
  podSelector:
    matchLabels:
      app: dokandar-frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.0.0/16        # TODO: VPC CIDR (ALB + node ENIs)
      ports:
        - protocol: TCP
          port: 3000
